<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/customborder"

        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/twenty"
        android:textColor="@color/colorPrimaryDark"/>

    <RadioGroup
        android:id="@+id/rg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton
            android:id="@+id/gender_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:textSize="@dimen/eighteen"
            android:layout_marginRight="@dimen/hundred"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:textSize="@dimen/eighteen"/>

    </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark"
/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/twenty"
        android:textColor="@color/colorPrimaryDark"/>


    <EditText
        android:id="@+id/add_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Add Age"
        android:inputType="number"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark"
/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/systolic_blood_pressure_mm_hg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/twenty"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/add_pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Add Pressure"
        android:inputType="number"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cigarette_smoker_in_past_year"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/twenty"
        android:textColor="@color/colorPrimaryDark"/>


    <RadioGroup
        android:id="@+id/rg2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton
            android:id="@+id/smoke_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes"
            android:textSize="@dimen/eighteen"
            android:layout_marginRight="@dimen/hundred"/>

        <RadioButton
            android:id="@+id/smoke_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No"
            android:textSize="@dimen/eighteen"
            android:checked="true"/>

    </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diabetes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/twenty"
        android:textColor="@color/colorPrimaryDark"/>


    <RadioGroup
        android:id="@+id/rg3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton
            android:id="@+id/diabetes_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes"
            android:textSize="@dimen/eighteen"
            android:layout_marginRight="@dimen/hundred"/>

        <RadioButton
            android:id="@+id/diabetes_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No"
            android:textSize="@dimen/eighteen"
            android:checked="true"/>

    </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prior_stroke_transient_ischemic_attack_tia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/twenty"
        android:textColor="@color/colorPrimaryDark"/>


    <RadioGroup
        android:id="@+id/rg4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton
            android:id="@+id/prior_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes"
            android:textSize="@dimen/eighteen"
            android:layout_marginRight="@dimen/hundred"/>

        <RadioButton
            android:id="@+id/prior_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No"
            android:textSize="@dimen/eighteen"
            android:checked="true"/>

    </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_of_congestive_heart_failure_or_myocardial_infraction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/twenty"
        android:textColor="@color/colorPrimaryDark"/>


    <RadioGroup
        android:id="@+id/rg5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton
            android:id="@+id/hf_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes"
            android:textSize="@dimen/eighteen"
            android:layout_marginRight="@dimen/hundred"/>

        <RadioButton
            android:id="@+id/hf_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No"
            android:textSize="@dimen/eighteen"
            android:checked="true"/>

    </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/significant_murmur_grade_3_6_or_higher_systolic_any_diastolic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/twenty"
        android:textColor="@color/colorPrimaryDark"/>


    <RadioGroup
        android:id="@+id/rg6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton
            android:id="@+id/murmur_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes"
            android:textSize="@dimen/eighteen"
            android:layout_marginRight="@dimen/hundred"/>

        <RadioButton
            android:id="@+id/murmur_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No"
            android:textSize="@dimen/eighteen"
            android:checked="true"/>

    </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/electrocardiographic_left_ventricular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/twenty"
        android:textColor="@color/colorPrimaryDark"/>


    <RadioGroup
        android:id="@+id/rg7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton
            android:id="@+id/electro_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes"
            android:textSize="@dimen/eighteen"
            android:layout_marginRight="@dimen/hundred"/>

        <RadioButton
            android:id="@+id/electro_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No"
            android:textSize="@dimen/eighteen"
            android:checked="true"/>

    </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Calculate"
        android:textColor="@color/colorblack"
        android:textSize="@dimen/twenty"/>
</LinearLayout>
</LinearLayout>
</ScrollView>